# PyPeripheral

./: .gitignore  Instructions.md  LICENSE  LICENSE.md  Old_README.md  README  README.md  UpdateLog.md  pyproject.toml  setup.py
Codes/: Config.txt  README.md  Razer.py  ScreenReactive.md  ScreenReactive.py  main.py  protogui.py  screenreactive.py
Codes/Communications/: ServerSide.py
Codes/Wrappers/: Corsair.py  README.md  Razer.py
Codes/cue_sdk/: OLDenumerations.py  README  README.md  __init__.py  api.py  enumerations.py  exceptions.py  newENUMs.py  structures.py
Codes/cue_sdk/enumerations/: K95_RGB_PLAT.py  README.md
Codes/temp/samples/: TestFunc.py  findkeyvalue.py  rainbow.py  setall.py
Codes/temp/sdk_cue_examples/: callback.py  (+3 more)
Demos/: GUI.py  README.md  RainbowAll.py  ScreenReactive.py  StaticColor.py  __init__.py  installer.bat
Pics/: README.md
PyPeripheral/: README.md  __init__.py  __init__.pyx  setup.py  test.py
PyPeripheral/AbstractSDK/: README.md  SDK.pyx  __init__.py  abstractSDK.h  abstractSDK.pxd
PyPeripheral/All/: SDK.cpp  SDK.pyx  __init__.py
PyPeripheral/Corsair/: Corsair.cpp  Corsair.h  Corsair.pxd  SDK.pyx  __init__.py  __init__.pyx
PyPeripheral/PyPeripheral/: AbstractSDKClass.md  All.py  Corsair.py  Errors.py  README.md  Razer.py  __init__.py  abstractSDK.py
PyPeripheral/Razer/: Razer.cpp  Razer.h  Razer.pxd  SDK.pyx  __init__.py  __init__.pyx
Releases/Demo/: GUI.py  RainbowAll.py  ScreenReactive.py  StaticColor.py  __init__.py  abstractDemo.py
dllFiles/Corsair/: README.md
github/: KnownIssues.md  WorkingDevices.md
(+17 files in other folders)
